--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,6 @@
-// test
+@import "general/var.scss";
+@import "general/common.scss";
+@import "general/normalize.scss";
+
+@import "blocks/products.scss";
+@import "blocks/element.scss";
