--- a/source/sass/blocks/element.scss
+++ b/source/sass/blocks/element.scss
@@ -5,6 +5,7 @@
     color: #666666;
     font-family: "Trebuchet MS";
     font-size: 16px;
+    max-width: 206px;
 
     &--disabled {
         color: #b3b3b3;
@@ -24,6 +25,7 @@
     position: absolute;
     top: 44px;
     left: 44px;
+    max-width: 212px;
     color: #000000;
     font-family: "Trebuchet MS";
     font-size: 48px;
@@ -42,6 +44,7 @@
     font-family: "Trebuchet MS";
     font-size: 24px;
     font-weight: 700;
+    max-width: 113px;
 
     &--disabled {
         color: #b3b3b3;
@@ -65,6 +68,7 @@
     position: absolute;
     top: 142px;
     left: 48px;
+    max-width: 128px;
     color: #666666;
     font-family: "Trebuchet MS";
     font-size: 14px;
