--- a/source/sass/general/common.scss
+++ b/source/sass/general/common.scss
@@ -47,8 +47,24 @@ html {
   }
   
   @font-face {
-    font-family: "Exo-thin";
+    font-family: "Exo2.0-Thin";
     src: url("/source/fonts/Exo2.0-Thin.otf") format("otf");
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Trebuchet";
+    src: url("/source/fonts/Trebuchet\ MS.ttf") format("ttf");
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Serveroff";
+    src: url("/source/fonts/Serveroff.ttf") format("ttf");
     font-weight: 100;
     font-style: normal;
     font-display: swap;
