--- a/source/sass/general/var.scss
+++ b/source/sass/general/var.scss
@@ -1,10 +1,12 @@
 $mobile-width: (max-width: 767px);
 $tablet-width: "(min-width: 768px)";
-$desktop-width: "(min-width: 1300px)";
+$desktop-width: "(min-width: 1100px)";
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 $border-color: #d9d9d9;
 $font: "Trebuchet MS", "Arial", sans-serif;
-$font-exo: "Exo-thin", "Arial", sans-serif;
+$font-exo: "Exo 2.0-Thin", "Arial", sans-serif;
+$font-trebuchet: "Trebuchet", "Arial", sans-serif;
+$font-serveroff: "Serveroff", "Arial", sans-serif;
 
 // #{$media}
