--- a/source/sass/general/var.scss
+++ b/source/sass/general/var.scss
@@ -5,7 +5,7 @@ $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 $border-color: #d9d9d9;
 $font: "Trebuchet MS", "Arial", sans-serif;
-$font-exo: "Exo 2.0-Thin", "Arial", sans-serif;
+$font-exo: "Exo 2.0", "Arial", sans-serif;
 $font-trebuchet: "Trebuchet", "Arial", sans-serif;
 $font-serveroff: "Serveroff", "Arial", sans-serif;
 
