--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,5 +2,5 @@
 @import "general/common.scss";
 @import "general/normalize.scss";
 
-@import "blocks/products.scss";
+@import "blocks/main-blocks.scss";
 @import "blocks/element.scss";
